--- a/html/index.html
+++ b/html/index.html
@@ -32,6 +32,7 @@
       <link rel="stylesheet" href="css/owl.theme.default.min.css">
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fancybox/2.1.5/jquery.fancybox.min.css" media="screen">
       <link href="https://unpkg.com/gijgo@1.9.13/css/gijgo.min.css" rel="stylesheet" type="text/css" />
+      <script src="https://assets.adobedtm.com/18d6771123cb/63079babfcff/launch-3e8c1023d9fa-development.min.js" async=""></script>
    </head>
    <body>
       <!-- header section start -->
